{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 450,
  "lineage": "c7895177-1a64-8180-cd8f-74a217d451d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "arm_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6a3d28fefad333b",
            "domain": "vpc",
            "id": "eipalloc-0e6a3d28fefad333b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-207-61-199.compute-1.amazonaws.com",
            "public_ip": "44.207.61.199",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "arm_server_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cc96665c243d56f",
            "arn": "arn:aws:ec2:us-east-1:381492043819:instance/i-0c183f00c99471fe4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0c183f00c99471fe4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0afe3a3fd35a7a20a",
            "private_dns": "ip-192-168-1-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:381492043819:key/dd2250de-be17-44af-8d21-75581515b154",
                "throughput": 0,
                "volume_id": "vol-0d564de8883f0d18e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3278764369dc951",
            "tags": {
              "Name": "armz19378-PrivateServer"
            },
            "tags_all": {
              "Name": "armz19378-PrivateServer",
              "Project": "AdministracijaRacunarskihMreza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05096a370e6167ac5"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.arm_ecs_cluster",
            "aws_kms_key.ebs_encryption_key",
            "aws_security_group.arm_security_group",
            "aws_subnet.arm_subnet_private",
            "aws_vpc.arm_vpc",
            "data.aws_ami.ecs_optimized_amazon_linux_ami",
            "data.aws_caller_identity.current",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_iam_policy_document.ebs_encryption_kms_key_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "arm_server_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:381492043819:instance/i-06f3c33a073dbacfc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-06f3c33a073dbacfc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "arm-ec2-access-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-035baf16ab65ed90e",
            "private_dns": "ip-192-168-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.50",
            "public_dns": "ec2-34-207-57-99.compute-1.amazonaws.com",
            "public_ip": "34.207.57.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:381492043819:key/dd2250de-be17-44af-8d21-75581515b154",
                "throughput": 0,
                "volume_id": "vol-083645e02e14c5b4c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b11d64e9078045e9",
            "tags": {
              "Name": "armz19378-PublicServer"
            },
            "tags_all": {
              "Name": "armz19378-PublicServer",
              "Project": "AdministracijaRacunarskihMreza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05096a370e6167ac5"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.arm_ecs_cluster",
            "aws_ecs_service.database_service",
            "aws_ecs_task_definition.database_task",
            "aws_key_pair.arm_ec2_access_key",
            "aws_kms_key.ebs_encryption_key",
            "aws_security_group.arm_security_group",
            "aws_subnet.arm_subnet_private",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc",
            "data.aws_ami.ubuntu_ami",
            "data.aws_caller_identity.current",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_iam_policy_document.ebs_encryption_kms_key_policy",
            "data.aws_iam_role.lab_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arm_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492043819:internet-gateway/igw-018e035e6dffae608",
            "id": "igw-018e035e6dffae608",
            "owner_id": "381492043819",
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            },
            "vpc_id": "vpc-05d7b2fc2dd26b6e5"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "arm_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6a3d28fefad333b",
            "association_id": "eipassoc-04c5709803f9e49fa",
            "connectivity_type": "public",
            "id": "nat-07d44d3a2ca047108",
            "network_interface_id": "eni-0d8cf3b0f45cd8e16",
            "private_ip": "192.168.1.44",
            "public_ip": "44.207.61.199",
            "subnet_id": "subnet-0b11d64e9078045e9",
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            }
          },
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492043819:route-table/rtb-02c2cc4a903f8f176",
            "id": "rtb-02c2cc4a903f8f176",
            "owner_id": "381492043819",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d44d3a2ca047108",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7b2fc2dd26b6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_nat_gateway.arm_nat_gateway",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492043819:route-table/rtb-0065e7d4fdc53cc94",
            "id": "rtb-0065e7d4fdc53cc94",
            "owner_id": "381492043819",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018e035e6dffae608",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7b2fc2dd26b6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cb8213605b8e93c",
            "route_table_id": "rtb-02c2cc4a903f8f176",
            "subnet_id": "subnet-0f3278764369dc951"
          },
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_nat_gateway.arm_nat_gateway",
            "aws_route_table.arm_private_rt",
            "aws_subnet.arm_subnet_private",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db4a22575120ab6e",
            "route_table_id": "rtb-0065e7d4fdc53cc94",
            "subnet_id": "subnet-0b11d64e9078045e9"
          },
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_route_table.arm_public_rt",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492043819:security-group/sg-05096a370e6167ac5",
            "description": "Security group for ARM EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP egress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS egress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic in security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-05096a370e6167ac5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic in security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "arm_security_group",
            "name_prefix": "",
            "owner_id": "381492043819",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d7b2fc2dd26b6e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arm_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492043819:subnet/subnet-0f3278764369dc951",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3278764369dc951",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492043819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "armz19378-Private"
            },
            "tags_all": {
              "Name": "armz19378-Private",
              "Project": "AdministracijaRacunarskihMreza"
            },
            "vpc_id": "vpc-05d7b2fc2dd26b6e5"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492043819:subnet/subnet-0b11d64e9078045e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.1.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b11d64e9078045e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492043819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "armz19378-Public"
            },
            "tags_all": {
              "Name": "armz19378-Public",
              "Project": "AdministracijaRacunarskihMreza"
            },
            "vpc_id": "vpc-05d7b2fc2dd26b6e5"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492043819:vpc/vpc-05d7b2fc2dd26b6e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/26",
            "default_network_acl_id": "acl-01ad57bba01705fcb",
            "default_route_table_id": "rtb-0df0c4f56ff4c48a2",
            "default_security_group_id": "sg-08f83ccb3b4b39e03",
            "dhcp_options_id": "dopt-00107d64782f48d03",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d7b2fc2dd26b6e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df0c4f56ff4c48a2",
            "owner_id": "381492043819",
            "tags_all": {
              "Project": "AdministracijaRacunarskihMreza"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}